@@ -47,12 +47,12 @@ int existsonpath(const char *exe)
 
 bool is_executable(const char *path)
 {
-        struct stat s;
+  struct stat s;
 
-        int rc = stat(path, &s);
-        N(rc != -1, F("error getting status of file %s: %s") % path % os_strerror(errno));
+  int rc = stat(path, &s);
+  N(rc != -1, F("error getting status of file %s: %s") % path % os_strerror(errno));
 
-        return (s.st_mode & S_IXUSR) && !(s.st_mode & S_IFDIR);
+  return (s.st_mode & S_IXUSR) && !(s.st_mode & S_IFDIR);
 }
 
 // copied from libc info page
@@ -66,43 +66,43 @@ read_umask()
 
 int make_executable(const char *path)
 {
-        mode_t mode;
-        struct stat s;
-        int fd = open(path, O_RDONLY);
-        N(fd != -1, F("error opening file %s: %s") % path % os_strerror(errno));
-        if (fstat(fd, &s))
-          return -1;
-        mode = s.st_mode;
-        mode |= ((S_IXUSR|S_IXGRP|S_IXOTH) & ~read_umask());
-        int ret = fchmod(fd, mode);
-        N(close(fd) == 0, F("error closing file %s: %s") % path % os_strerror(errno));
-        return ret;
+  mode_t mode;
+  struct stat s;
+  int fd = open(path, O_RDONLY);
+  N(fd != -1, F("error opening file %s: %s") % path % os_strerror(errno));
+  if (fstat(fd, &s))
+    return -1;
+  mode = s.st_mode;
+  mode |= ((S_IXUSR|S_IXGRP|S_IXOTH) & ~read_umask());
+  int ret = fchmod(fd, mode);
+  N(close(fd) == 0, F("error closing file %s: %s") % path % os_strerror(errno));
+  return ret;
 }
 
 pid_t process_spawn(const char * const argv[])
 {
-        {
-                std::ostringstream cmdline_ss;
-                for (const char *const *i = argv; *i; ++i)
-                {
-                        if (i != argv)
-                                cmdline_ss << ", ";
-                        cmdline_ss << "'" << *i << "'";
-                }
-                L(FL("spawning command: %s\n") % cmdline_ss.str());
-        }       
-        pid_t pid;
-        pid = fork();
-        switch (pid)
-        {
-                case -1: /* Error */
-                        return -1;
-                case 0: /* Child */
-                        execvp(argv[0], (char * const *)argv);
-                        raise(SIGKILL);
-                default: /* Parent */
-                        return pid;
-        }
+  {
+    std::ostringstream cmdline_ss;
+    for (const char *const *i = argv; *i; ++i)
+      {
+        if (i != argv)
+          cmdline_ss << ", ";
+        cmdline_ss << "'" << *i << "'";
+      }
+    L(FL("spawning command: %s\n") % cmdline_ss.str());
+  }       
+  pid_t pid;
+  pid = fork();
+  switch (pid)
+    {
+    case -1: /* Error */
+      return -1;
+    case 0: /* Child */
+      execvp(argv[0], (char * const *)argv);
+      raise(SIGKILL);
+    default: /* Parent */
+      return pid;
+    }
 }
 
 struct redir
@@ -114,7 +114,7 @@ struct redir
   ~redir();
 };
 redir::redir(int which, char const * file)
- : savedfd(-1), fd(which)
+  : savedfd(-1), fd(which)
 {
   if (!file || *file == '\0')
     return;
@@ -165,41 +165,41 @@ pid_t process_spawn_redirected(char const * in,
 
 int process_wait(pid_t pid, int *res, int timeout)
 {
-        int status;
-        int flags = 0;
-        if (timeout == -1)
-          timeout = 0;
-        else
-          flags |= WNOHANG;
-        int r;
-        for (r = 0; r == 0 && timeout >= 0; --timeout)
-          {
-            r = waitpid(pid, &status, flags);
-            if (r == 0 && timeout > 0)
-              process_sleep(1);
-          }
-        if (r == 0)
-          return -1;
-        if (WIFEXITED(status))    
-                *res = WEXITSTATUS(status);
-        else
-                *res = -WTERMSIG(status);
-        return 0;
+  int status;
+  int flags = 0;
+  if (timeout == -1)
+    timeout = 0;
+  else
+    flags |= WNOHANG;
+  int r;
+  for (r = 0; r == 0 && timeout >= 0; --timeout)
+    {
+      r = waitpid(pid, &status, flags);
+      if (r == 0 && timeout > 0)
+        process_sleep(1);
+    }
+  if (r == 0)
+    return -1;
+  if (WIFEXITED(status))    
+    *res = WEXITSTATUS(status);
+  else
+    *res = -WTERMSIG(status);
+  return 0;
 }
 
 int process_kill(pid_t pid, int signal)
 {
-        return kill(pid, signal);
+  return kill(pid, signal);
 }
 
 int process_sleep(unsigned int seconds)
 {
-        return sleep(seconds);
+  return sleep(seconds);
 }
 
 pid_t get_process_id()
 {
-        return getpid();
+  return getpid();
 }
 
 void ignore_sigpipe()
