@@ -1,3 +1,9 @@
+2006-12-26  Derek Scherger  <derek@echologic.com>
+
+	* unix/process.cc (is_executable, make_executable, process_spawn,
+	process_spawn, redir, process_wait, process_kill, process_sleep,
+	get_process_id): fix indentation
+
 2006-12-26  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* Makefile.am (BOTAN_SOURCES): Remove entries for missing headers,
